# diversity-aware-event-prediction

./: .gitignore  Pipfile  README.md  bart_preprocess.py  download.sh  pyproject.toml
config/descript/: descript-CVAESeq2seq-batchsize.64-epoch.100-lr.0.001-n_layers.2-n_units.300-num_sampling.1-cost.1.0-increase_rate.0.01-offset.-1000.0-lambda_reconstruction.0.1-attention-reconstruction  descript-CVAESeq2seq-batchsize.64-epoch.100-lr.0.001-n_layers.2-n_units.300-num_sampling.1-cost.1.0-increase_rate.0.01-offset.-1000.0-lambda_reconstruction.0.5-reconstruction  descript-CVAESeq2seq-batchsize.64-epoch.100-lr.0.001-n_layers.2-n_units.300-num_sampling.1-cost.1.0-increase_rate.0.01-offset.-500.0-word_dropout.0.1  descript-CVAESeq2seq-batchsize.64-epoch.100-lr.0.001-n_layers.2-n_units.300-num_sampling.1-cost.1.0-increase_rate.0.01-offset.-500.0-word_dropout.0.1-attention  descript-Seq2seq-batchsize.64-epoch.100-lr.0.0001-n_layers.2-n_units.300-lambda_reconstruction.0.5-attention-reconstruction  descript-Seq2seq-batchsize.64-epoch.100-lr.0.0001-n_layers.2-n_units.300-lambda_reconstruction.1.0-attention-reconstruction  descript-Seq2seq-batchsize.64-epoch.100-lr.0.001-n_layers.2-n_units.300  descript-Seq2seq-batchsize.64-epoch.100-lr.0.001-n_layers.2-n_units.300-attention  descript-Seq2seq-batchsize.64-epoch.100-lr.0.001-n_layers.2-n_units.300-lambda_reconstruction.0.1-attention-reconstruction  (+3 more)
src/: LICENSE  generate.py  generate_interactively.py  show_result.py  test.py  test_bart.py  train.py  train_bart.py
src/base/: base_model.py
src/model/: __init__.py  attention.py  (+2 more)
(+20 files in other folders)
