[tool.poetry]
name = "diversity-aware-event-prediction"
version = "0.1.0"
description = ""
authors = ["Hirokazu Kiyomaru <h.kiyomaru@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.10.1"
transformers = "^4.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
